fix info box align

--- a/styles/index.css
+++ b/styles/index.css
@@ -135,7 +135,6 @@ body {
     width: 224px;
     height: 278px;
     background-color: white;
-    margin-left: 141px;
     text-align: center;
     position: relative;
     top: -400px;
